--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
       #addproduct {height: 100%; width:15%; background-color: #ffeb38; border-radius: 0px}
       #closetable {position:fixed;padding: 0px; margin:0px;width:30%;height:10vh;bottom:0px;background-color:#cc2222;color:white;font-size:20px;border-radius: 5%}
       #CloseAllTables {position: absolute;top:14%;width: 100%}
-      #configTable {display: flex; align-items: center; justify-content: center; flex-direction: column;}
+      #configTable {overflow: hidden;border: 2px solid white;border-radius: 10%;display: flex; align-items: center; justify-content: center; flex-direction: column;}
+      #configTable > select, #configTable > input {margin: 5px}
       #configTableButton {position: absolute;width: 10%; margin: 5px;left: 5px;top:5px}
       #configTableModal {position: absolute; top:0;left: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); z-index:201;display: flex; align-items: center; justify-content: center; flex-direction: column;}
       #confirmReservation { position: absolute;left:-2px;bottom: 0; width:101%; height:20%}
@@ -59,6 +60,10 @@
   </head>
   <body>
     <div class="preloader"><img src="/preloader.svg" alt="Cargando..."></div>
+    <div class="sideNav" id='sideNav'>
+      <a href="/settings.html">Configuració</a>
+      <a href="/about.html">Acerca de</a>
+    </div>
     <div class="tablecontainer" id='tablecontainer'>
       <input type="image" id='leftPanelButton' src='config.png'>
       <div class="leftPanel" id='leftPanel'>
@@ -146,15 +151,15 @@
     <div class="configTableModal" id='configTableModal'>
       <div id="configTable">
         <select id="paymentMethod">
-          <option value="efectivo">Efectivo</option>
-          <option value="credito">Tarjeta de crédito</option>
-          <option value="debito">Tarjeta de débito</option>
+          <option value="cash">Efectivo</option>
+          <option value="credit">Tarjeta de crédito</option>
+          <option value="debit">Tarjeta de débito</option>
         </select>
         <select id="paymentCard">
           <option value="visa">VISA</option>
           <option value="mastercard">MasterCard</option>
         </select>
-        <input type="number" id="descuento" placeholder="Descuento">
+        <input style='width:50%' type="number" id="discount" min=1 max=100 placeholder="Descuento">%
       </div>
     </div>
     <div class='modalReservationTime' id='modalReservationTime'>
@@ -195,9 +200,9 @@
       this.reservations = [];
       this.orders = new Array();
       this.partyOf = 1;
-      this.paymentMethod = "";
+      this.paymentMethod = "cash";
       this.paymentCard = "";
-      this.discount = 0;
+      this.discount = '';
       this.total = 0
     }
   }
@@ -228,7 +233,7 @@
 
 
 
-  //RESET ALL TABLES
+  //HARD RESET ALL TABLES
   //socket.emit('alteredorders',[tables,1]);
 
   $('#resetTablesOrders').on('click', function(){
@@ -251,6 +256,10 @@
       tables[i].orders = [];
       tables[i].isOpen = false;
       tables[i].waiter = "";
+      tables[i].partyOf = 1;
+      tables[i].paymentMethod = "cash";
+      tables[i].paymentCard = "";
+      tables[i].discount = 0;
     }
     console.log('Borrando todas las reservas...');
     socket.emit('closeAllTables', [tables,1]);
@@ -274,6 +283,19 @@
       order = tables[table].orders[i];
       var markup = "<tr id='o" + i + "' class='" + order[1] + "'><td>" + order[2] + "</td><td class='cantitem'>" + order[3] + "<input class='addsame' type='button' value='+'><input class='removesame' type='button' value='-'></td><td class='monto'>" + order[0] + "</td><td> <input class='removeFromList' type='button' value='Quitar'></td></tr>";
       $("#orderTable tr:last").after(markup);
+    }
+    console.log(tables[table].paymentMethod);
+    $('#paymentMethod').val(tables[table].paymentMethod);
+    if (tables[table].paymentMethod != 'cash') {
+      $('#paymentCard').val(tables[table].paymentCard);
+      $('#paymentCard').show();
+    } else {
+      $('#paymentCard').hide();
+    }
+    if (tables[table].discount > 0){
+      $('#discount').val(tables[table].discount);
+    } else {
+      $('#discount').val('');
     }
   }
 
@@ -302,6 +324,7 @@
   $('#leftPanelDetailCleanreservations').hide();
   $('#leftPanelDetailCloseTables').hide();
   $('#leftPanelDetailListReservations').hide();
+  $('#paymentCard').hide();
   $('#modalCalendar').hide();
   $('#modalCalendar').load('/calendar.html', function() {
     $('.wrapper').on('click', function () {
@@ -335,6 +358,9 @@
       tables[i].waiter = response[i].waiter;
       tables[i].orders = response[i].orders;
       tables[i].partyOf = response[i].partyOf;
+      tables[i].paymentMethod = response[i].paymentMethod;
+      tables[i].paymentCard = response[i].paymentCard;
+      tables[i].discount = response[i].discount;
       tables[i].total = response[i].total;
       if (tables[i].isOpen == true) {
         $('#table' + Number(i+1)).css('background-color', '#22cc22');
@@ -409,6 +435,7 @@
     $('#table' + tableopened[5]).css('background-color', '#22cc22');
     tables[tableopened[5]-1].isOpen = true;
     tables[tableopened[5]-1].waiter = currentWaiter;
+    $('#partyOf').val(1);
     $('#closetable').show();
     $('#opentable').fadeOut('fast');
     tables[tableopened[5]-1].timer.setTime(currentTime);
@@ -425,6 +452,10 @@
       tables[tableclosed-1].isOpen = false;
       tables[tableclosed-1].orders = [];
       tables[tableclosed-1].waiter = "";
+      tables[tableclosed-1].partyOf = 1;
+      tables[tableclosed-1].paymentMethod = "cash";
+      tables[tableclosed-1].paymentCard = "";
+      tables[tableclosed-1].discount = 0;
       populateOrderTable(tableclosed-1)
       $('#closetable').fadeOut('fast');
       $('#opentable').fadeIn('fast');
@@ -449,6 +480,33 @@
     e.stopPropagation();
   })
 
+  $('#paymentMethod').on('change', function() {
+    var mesa = $('#tablename').text()[5];
+    if ($('#paymentMethod').val() == 'cash') {
+      $('#paymentCard').fadeOut();
+      tables[mesa-1].paymentCard = '';
+    } else {
+      $('#paymentCard').fadeIn();
+      tables[mesa-1].paymentCard = $('#paymentCard').val();
+    }
+    tables[mesa-1].paymentMethod = $('#paymentMethod').val();
+    socket.emit('alteredorders', [tables, mesa])
+  })
+
+  $('#paymentCard').on('change', function() {
+    var mesa = $('#tablename').text()[5];
+    tables[mesa-1].paymentCard = $('#paymentCard').val();
+    socket.emit('alteredorders', [tables, mesa])
+  })
+
+  $('#discount').on('change keyup', function() {
+    var mesa = $('#tablename').text()[5];
+    if ($('#discount').val() > 100) {
+      $('#discount').val(100);
+    }
+    tables[mesa-1].discount = $('#discount').val();
+    socket.emit('alteredorders', [tables, mesa])
+  })
 
   $('#tablecontainer').on('click', function() {
     $('#tablecontainer').animate({width: '100%'});
@@ -469,7 +527,7 @@
     e.stopPropagation();
     var tableclicked = $(this).attr('id')[5];
     console.log(tables[tableclicked-1].orders);
-      populateOrderTable(tableclicked-1);
+    populateOrderTable(tableclicked-1);
     if (tables[tableclicked-1].isOpen == true) {
       $('#opentable').hide();
       $('#closetable').show();
@@ -637,12 +695,19 @@
       console.log('Mesa ' + num + ' cerrada');
       tables[num-1].isOpen = false;
       tables[num-1].orders = [];
+      tables[num-1].partyOf = 1;
+      tables[num-1].paymentMethod = "cash";
+      tables[num-1].paymentCard = "";
+      tables[num-1].discount = 0;
       $('#table' + num).css('background-color', '#000000');
       $('#clock' + num).fadeOut();
       if ($('#tablename').text()[5] == num) {
         $('#opentable').fadeIn('fast');
         $('#closetable').fadeOut('fast');
         $('#thisTableWaiter').text('');
+        $('#paymentMethod').val('cash');
+        $('#paymentCard').hide();
+        $('#discount').val('');
       }
       closedNotification.play();
     });
@@ -651,6 +716,9 @@
       console.log('Orden ' + newData[1].orders);
       tables[newData[0]-1].orders = newData[1].orders;
       tables[newData[0]-1].partyOf = newData[1].partyOf;
+      tables[newData[0]-1].paymentMethod = newData[1].paymentMethod;
+      tables[newData[0]-1].paymentCard = newData[1].paymentCard;
+      tables[newData[0]-1].discount = newData[1].discount;
       if ($('#tablename').text()[5] == newData[0]) {
         populateOrderTable(newData[0]-1);
         $('#total').text(computeTotal());
@@ -688,6 +756,10 @@
         tables[i].orders = [];
         tables[i].isOpen = false;
         tables[i].waiter = "";
+        tables[i].partyOf = 1;
+        tables[i].paymentMethod = "cash";
+        tables[i].paymentCard = "";
+        tables[i].discount = 0;
         $('#table' + Number(i+1)).css('background-color', '#000000');
         $('#clock' + Number(i+1)).fadeOut();
       }
