pagina de settings
No anda nada todavia

--- a/index.html
+++ b/index.html
@@ -8,20 +8,23 @@
   <body>
     <div class="preloader"><img src="/preloader.svg" alt="Cargando..."></div>
     <div class="sideNav" id='sideNav'>
-      <a href="/settings.html">Configuració</a>
+
+      <a href="/settings.html">Configuración</a>
       <a href="/about.html">Acerca de</a>
     </div>
     <div class="tablecontainer" id='tablecontainer'>
       <input type="image" id='leftPanelButton' src='config.png'>
       <div class="leftPanel" id='leftPanel'>
           <input type="image" id="resetTablesOrders" src="/clean.png">
-          <p id='leftPanelDetailCleanOrders' style='text-align: left;position:absolute;top:0;left:110%;width:500%'>Limpiar ordenes de las mesas</p>
+          <p id='leftPanelDetailCleanOrders' style='text-align: left;position:absolute;top:0;left:110%;width:1000%'>Limpiar ordenes de las mesas</p>
           <input type="image" id="resetTablesReservations" src="/calendar-clear.png">
-          <p id='leftPanelDetailCleanreservations' style='text-align: left;position:absolute;top:7%;left:110%;width:500%'>Limpiar reservas</p>
+          <p id='leftPanelDetailCleanreservations' style='text-align: left;position:absolute;top:7%;left:110%;width:1000%'>Limpiar reservas</p>
           <input type="image" id="CloseAllTables" src="/close.png">
-          <p id='leftPanelDetailCloseTables' style='text-align: left;position:absolute;top:14%;left:110%;width:500%'>Cerrar todas las mesas</p>
+          <p id='leftPanelDetailCloseTables' style='text-align: left;position:absolute;top:14%;left:110%;width:1000%'>Cerrar todas las mesas</p>
           <input type="image" id='listReservations' src='calendar.svg'>
-          <p id='leftPanelDetailListReservations' style='text-align: left;position:absolute;top:21%;left:110%;width:500%'>Reservas</p>
+          <p id='leftPanelDetailListReservations' style='text-align: left;position:absolute;top:21%;left:110%;width:1000%'>Reservas</p>
+          <a href="/settings"><input type="image" id='settings' src='settings.svg'></a>
+          <p id='leftPanelSettings' style='text-align: left;position:absolute;top:28%;left:110%;width:1000%'>Configuración del sistema</p>
 
         </div>
       <div style='top:5%;right:5%' class="table" id='table1'>
